test/types/sync/ferguson/sync-coerce-to-ref.good
sync-coerce-to-ref.chpl:5: In function 'test':
sync-coerce-to-ref.chpl:10: error: unresolved call 'acceptRef(sync int(64))'
sync-coerce-to-ref.chpl:1: note: this candidate did not match: acceptRef(ref arg: int)
sync-coerce-to-ref.chpl:10: note: because call actual argument #1 with type sync int(64)
sync-coerce-to-ref.chpl:1: note: is passed to formal 'ref arg: int(64)'
